--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -143,7 +143,7 @@
 }
 
 @article{brown2020SummaryAbundance2020,
-  title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) in {{Southern British Columbia}}, {{Canada}}},
+  title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} (\textit{{Oncorhynchus} tshawytscha}) in {{Southern British Columbia}}, {{Canada}} {\url{https://science-catalogue.canada.ca/record=4089004~S6}}},
   author = {Brown, G. S. and Thiess, M. E. and Wor, C. and Holt, C. A. and Patten, B. and Bailey, R. E. and Parken, C. K. and Baillie, S. J. and Candy, J. R. and Willis, D. M. and Hertz, E. and Connors, B. and Pestal, G. P.},
   year = {2020},
   journal = {Canadian Technical Report of Fisheries and Aquatic Sciences},
@@ -380,7 +380,7 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\GDYLNPH2\\DeFilippo et al. - 2021 - Improving short-term recruitment forecasts for coh.pdf}
 }
 
-@techreport{dfoCanadaPolicyConservation2005,
+@article{dfoCanadaPolicyConservation2005,
   title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
   year = {2005},
   collaborator = {DFO},
@@ -637,7 +637,7 @@
 }
 
 @techreport{godboutStockStatusWild2004,
-  title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Keta }}{{{\emph{Walbaum}}}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
+  title = {Stock {{Status}} of {{Wild Chum Salmon}} (\textit{{Oncorhynchus} keta} {Walbaum}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
   author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   year = {2004},
   number = {2004/007},
@@ -647,7 +647,7 @@
 }
 
 @article{grant2017FraserSockeye2020,
-  title = {The 2017 {{Fraser Sockeye Salmon}} ({{Oncorhynchus}} Nerka) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
+  title = {The 2017 {{Fraser Sockeye Salmon}} (\textit{{Oncorhynchus} nerka}) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
   author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
   year = {2020},
   pages = {218},
@@ -823,7 +823,7 @@
 }
 
 @techreport{ifcrtConservationStrategyCoho2006,
-  title = {Conservation Strategy for {{Coho Salmon}}  ({{Oncorhynchus}} Kisutch), Interior {{Fraser River}} Populations},
+  title = {Conservation Strategy for {{Coho Salmon}}  (\textit{{Oncorhynchus} kisutch}), Interior {{Fraser River}} Populations},
   author = {{IFCRT}},
   year = {2006},
   pages = {132},
@@ -1259,10 +1259,10 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\K6R7JARU\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf}
 }
 
-@article{puntEssentialFeaturesNextgeneration2020a,
+@article{puntEssentialFeaturesNextgeneration2020,
   title = {Essential Features of the Next-Generation Integrated Fisheries Stock Assessment Package: {{A}} Perspective},
   shorttitle = {Essential Features of the Next-Generation Integrated Fisheries Stock Assessment Package},
-  author = {Punt, Andr{\'e} E. and Dunn, Alistair and Elvarsson, Bjarki {\TH}{\'o}r and Hampton, John and Hoyle, Simon D. and Maunder, Mark N. and Methot, Richard D. and Nielsen, Anders},
+  author = {Punt, Andr{\'e} E. and Dunn, Alistair and Elvarsson, Bjarki and Hampton, John and Hoyle, Simon D. and Maunder, Mark N. and Methot, Richard D. and Nielsen, Anders},
   year = {2020},
   month = sep,
   journal = {Fisheries Research},
@@ -1343,7 +1343,7 @@
 
 @article{rossiInferringFisheriesStock2019,
   title = {Inferring Fisheries Stock Status from Competing Hypotheses},
-  author = {Rossi, Steven P. and Cox, Sean P. and Beno{\^i}t, Hugues P. and Swain, Douglas P.},
+  author = {Rossi, Steven P. and Cox, Sean P. and Benoit, Hugues P. and Swain, Douglas P.},
   year = {2019},
   month = aug,
   journal = {Fisheries Research},
