--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -17,8 +17,9 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \end{tcolorbox}
 
 Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and fitness defined as adult-to-adult reproductive success, and is considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and typically only populations dominated by wild salmon are included in assessments of biological status. However separating out the influence of hatchery enhancement in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are not usually marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect mark and tag data from individual salmon. 
-
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 **Accounting for genetic risk of hatchery production**
 
 Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant enhancement in analyses of CU and SMU biological status consistent with the WSP. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values $<$ 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and $<$ 0.72 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were proposed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
@@ -32,11 +33,15 @@ Data used to assess hatchery contribution to spawning and estimate PNI values ar
 
 
 In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives.<!--CH: this last sentence is in response to Chuck's Q as to if Withler recommend actions given a PNI value, or recommend management populations to a PNI value(goal). It's both. PNI goals are supposed to be developed for all pops. But for WSP assessments, hatchery-dominated pops are removed from analyses [focus of this section]-->Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC].
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 **Wild populations influenced by straying from hatcheries**
 
 In addition, @withlerGeneticallyBasedTargets2018 recommend that populations dominated by wild fish but influenced by hatchery stays (called 'wild stray-influenced' populations) should be included in CU assessments under the WSP. These populations receive strays from out-of-basin hatchery programs, but do not contain hatcheries themselves. Although the majority of fish may be wild in these populations, one-way gene flow modelling suggests that over time PNI values will decline to levels consistent with hatchery-dominated systems with continued straying. In practice, straying from out-of-basin hatcheries and the genetic impacts are generally not monitored or assessed and so out-of-basin strays included in total abundances within biological assessments. However, this represents a gap in our knowledge of hatchery impacts and our ability to implement @withlerGeneticallyBasedTargets2018's recommendations.  Two exceptions are @candyPatternsHomingStraying2000 which describes patterns of straying of Chinook salmon in BC, and the west coast of Vancouver Island where studies estimating the extent of straying for Chinook Salmon are on-going and may inform the evaluation of hatchery impacts in future biological assessments (W. Luedke pers. comm.). 
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 **Removing demographic influence of hatchery production**
 
 For integrated-transition and integrated-wild populations, WSP assessments of status have generally removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
@@ -127,7 +132,9 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 ### Proportional LRPs
 
 Proportion-based or proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone. To be consistent with the intent of the WSP of preserving biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think it might help explain the proportional LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines). See.
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 *Alignment with LRP Principles*
 
 Proportional LRPs are based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU being in the Red zone under the WSP, given that the deterioration of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses, to LRPs and SMU statuses (Principle 5).  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
@@ -157,7 +164,9 @@ In addition to proportional LRPs, we developed LRPs based on aggregate SMU-level
 
 
 ### Aggregate Abundance LRPs
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 **Logistic regression LRPs**
 
 Logistic regression LRPs are derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the proportional LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, or at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs will have statuses greater than Red as a function of aggregate SMU spawner abundances. The following logistic regression equation is used to estimate LRPs,
@@ -198,7 +207,9 @@ One advantage of logistic regression LRPs over proportional LRPs is that uncerta
 
 In addition, structural uncertainty in underlying assumptions made when developing CU-level benchmarks, such as the form of the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight of evidence for various assumptions can be evaluated to identify the assumption with the most support, which is then used for LRP development. This can include relying on support for various model forms provided in previous stock assessments or from meta-analyses. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the inverse of the variances, the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
 
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 *Alignment with LRP Principles*
 Logistic regression LRPs do not use the best available information for CU statuses in all cases (Principle 1), because they use only one metric of spawner abundances omitting metrics on trends which are useful in data-limited contexts. CUs that do not have abundance-based benchmarks are omitted from consideration of serous harm in this approach even when trends are available to estimate status. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture random noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (In review) for more details). THerefore, in some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner. Logistic regression LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. 
 
@@ -208,7 +219,9 @@ Logistic regression LRPs are operational (Principle 3) when harvest management o
 Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. <!--For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  -->One assumption of this method is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression LRPs may not represent serious harm under current or future conditions. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs varies (e.g., due to change towards weak stock management or when exploitation varies with the abundance of other species).  Uncertainties in CU status are accounted for explicitly when CU- and SMU-level models are statistically integrated (Principle 5). Logistic regression LRPs are aligned with Principle 6 to the extent that aggregate abundances are an acceptably reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from the multidimensional approach recommended under the WSP.
 
 <!--CH: moved to uncertainties section in last chapter "Also, it is not possible to assess sensitivity of LRPs to  structural assumptions about covariance in population dynamics among CU and the relationship between aggregate abundances and CU statuses, as the LRP depends only on the logistic fit to observed data." -->
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 **Projection LRPs** 
 
 Similar to logistic regression LRPs, projection LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression LRPs, for projection LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from projections instead of historical data.   
@@ -242,7 +255,9 @@ knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 Similar to logistic regression LRPs, for projection LRPs the uncertainty in CU benchmarks and status are explicitly accounted for when deriving the probability of all CUs being above their lower benchmarks. However, unlike logistic regression LRPs, there is no estimation uncertainty in projection LRPs because a logistic regression (or other model) is not required. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability. Therefore, confidence intervals are not provided. 
 
 Also, similar to logistic regression based LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results from stochastic random trials across those structural assumptions. See our implementation for Interior Fraser Coho Salmon in Holt et al. (In review) for more details.
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 *Alignment with LRP Principles*
 As for logistic regression LRPs, projection LRPs use only one metric of annual estimates of spawner abundances, and therefore do not use the best available information (Principle 1) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also similar to logistic regression LRPs, projection LRPs represent levels above serious harm (Principle 2) as indicated by status of any one CU being in the Red zone under the WSP, given the projection-based relationship between aggregate abundances and probability of all CUs being above their lower benchmark. 
 
