--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -1,23 +1,33 @@
 # DISCUSSION {#recommendations}
 
 ## KEY UNCERTAINTIES THAT AFFECT LRP ESTIMATES
-<!--CH: change names of LRPs according to decssion on Jan. 25-->
+
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item ...
+\item Uncertainties in  \textbf{CU-level benchmarks} affect both proportional and aggregate abundance LRPs, and arise because of:
+\begin{itemize} 
+\item observation errors in underlying data, e.g., related to uncertainty in the hatchery contribution to spawning
+\item estimation uncertainty in benchmarks arising from statistical model fitting and time-varying parameters
+\item structural uncertainties in model forms
+\end{itemize}
+\item Uncertainties can also arise in  \textbf{CU statuses}  due to the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). For both aggregate abundance LRPs, uncertainties can arise because CU-level status is based on only a single metric as a proxy for status on multiple dimensions as implemented in the Salmon Scanner. 
+\item The distribution of spawning among sub-populations within a CU can be important for the viability of the CU and SMU, and ignoring or misidentifying this stock structure may increase uncertainty in assessed status
+\item Uncertainties in all LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by data-rich CUs that are included. We recommend caution when applying provisional LRPs that do not include all CUs.
+\item Uncertainties in \textbf{logistic regression LRPs} arise from statistical estimation of the stock-recruitment and logistic models, as well as changes in the population parameters and covariance among CUs over time.
+\item For projection LRPs, uncertainties in underlying parameters and CU-level benchmarks are integrated into the probability of all CUs being above their lower benchmarks, so that the LRP itself does not have statistical estimation uncertainty. Projection LRPs explicitly account for underlying uncertainties in population parameters, such as CU-level productivity and capacity, age-structure, covariance in recruitment deviations, and variability in implementation of fixed exploitation strategies over time and among CUs. 
 \end{itemize}
 \end{tcolorbox}
 
 ### CU assessments
 
-Uncertainties in CU assessments affect both proportional and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
+Uncertainties in CU-level benchmarks affect both proportional and aggregate abundance LRPs, and arise because of observation errors in underlying data, estimation uncertainty in benchmarks, and structural uncertainties in model forms. Each of these three sources of uncertainty in benchmarks are described here. 
 
 First, observations errors in spawner abundances, the proportion of hatchery-origin spawners, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates of recruitment in 'run reconstructions' and assessment of status. In particular, the impact of hatchery enhancement on spawner and recruitment time-series is a key uncertainty due to the low rates of marking among hatcheries and sampling on the spawning grounds. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatchery enhancement can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic introgression from strays would help address these uncertainties.  Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments [e.g., @dfoWildSalmonPolicy2015], despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives for integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
 
 
 
-Second, in the estimation of benchmarks, statistical uncertainties can be represented with 95% confidence intervals derived analytically or with bootstrapping (or 95% credible intervals for Bayesian analyses).  Short time-series or those with insufficient contrast in spawner abundances can increase estimation uncertainties in benchmarks. For stock-recruitment based benchmarks in particular, observation errors in spawner abundances can bias benchmark estimates ('errors-in-variables'), as can correlations that occur when spawner abundance in a given year depends on recruitment in the previous generation [time-series biases, @waltersFisheriesEcologyManagement2004]. Uncertainties in percentile-based benchmarks can arise because of uncertainties in productivity and harvest rates required to categorize populations for benchmark identification  [as described in  @holtEvaluatingBenchmarksBiological2018]. Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010] may arise due to its parameterization based on spawner-recruit data sets that are outdated (ending in 2000) and likely more productive compared with for populations in our case study. To address this uncertainty, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
+Second, in the estimation of benchmarks, statistical uncertainties can be represented with 95% confidence intervals derived analytically or with bootstrapping (or 95% credible intervals for Bayesian analyses).  Short time-series or those with insufficient contrast in spawner abundances can increase estimation uncertainties in benchmarks. For stock-recruitment based benchmarks in particular, observation errors in spawner abundances can bias benchmark estimates ('errors-in-variables'), as can correlations that occur when spawner abundance in a given year depends on recruitment in the previous generation [time-series biases, @waltersFisheriesEcologyManagement2004]. Uncertainties in percentile-based benchmarks can arise because of uncertainties in productivity and harvest rates required to categorize populations for benchmark identification  [as described in  @holtEvaluatingBenchmarksBiological2018]. Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010] may arise due to its parameterization based on spawner-recruit data sets that are outdated (ending in 2000) and likely more productive compared with for populations in our case study. To address this uncertainty, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. All of these benchmarks may be biased when underlying population parameters change over time and these changes are not reflected in the estimation procedure (see Section \@ref(futureResearch) for more details).
 
 
 
@@ -31,7 +41,7 @@ Third, structural uncertainty in stock-recruitment models underlying benchmark e
 CH: not it's not, but have used 95%CIS to apprpoximate credible intervals for now...
 -->
 
-In addition to uncertainties in benchmarks, uncertainties can arise in CU statuses from their implementation in assessments. Uncertainty in status can result from the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). In some cases,  status is best represented by a composite of multiple metrics resulting in uncertainties in status when only a single metric (e.g., spawner abundances) is applied. Furthermore, the distribution of spawning among sub-populations within a CU is important for the viability of the aggregate, and ignoring or misidentifying this stock structure may result in higher uncertainty in assessed status. Uncertainties can also arise from applying stock-recruitment based benchmarks to spatial scales that are larger or smaller than the scale at which density dependence occurs. 
+In addition to uncertainties in benchmarks, uncertainties can arise in CU statuses from their implementation in assessments. Uncertainty in status can result from the choice of metrics used (single or multidimensional) and their spatial scale (CU or finer, sub-populations). In some cases,  status is best represented by a composite of multiple metrics resulting in uncertainties in status when only a single metric (e.g., spawner abundances) is applied. Furthermore, the distribution of spawning among sub-populations within a CU can be important for the viability of the aggregate, and ignoring or misidentifying this stock structure may result in higher uncertainty in assessed status. Uncertainties can also arise from applying stock-recruitment based benchmarks to spatial scales that are larger or smaller than the scale at which density dependence occurs. 
 
 
 Uncertainties in peer-reviewed WSP assessments are captured qualitatively through narratives associated with each CU assessment [e.g., @dfoWildSalmonPolicy2015] derived from experts integrating uncertainties in data and estimation of benchmarks and reconciling conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  Although uncertainties in CU status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner is applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are verified. A full review of the Salmon Scanner including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.-->
@@ -46,12 +56,12 @@ Uncertainties in status derived from proportional LRPs can arise from the exclus
 
 **Logistic regression LRPs**
 
-For logistic regression LRPs, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both. 
-<!--CH add: "The estimation of logistic regression model can be statistically integrated with estimation of underlying spawner-recruitment relationships at the CU-level when CU status is derived from spawner-recruitment based benchmarks. This statistical integration allow propagate uncertainties from CU level to SMU level."-->
+For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. We provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both. 
+The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allow uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
 
 Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
-Logistic regression LRPs are derived from proportion of CUs above their lower benchmark on a single metric as a proxy for status on multiple dimensions as implemented in the Salmon Scanner. In some cases, status from a single metric and status from the Salmon Scanner may deviate. These deviations result because of additional metrics considered and the generational smoothed time-series used to assess current status in the Salmon Scanner. Further details on assumptions that are required for logistic regression LRPs and conditions when they may be considered are described in Section \@ref(guidelines). 
+Furthermore, uncertainties in both aggregate abundances LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived CU status on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generational smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). Further details are described in Section \@ref(guidelines). 
 
 <!--CH comment: Suggest removing next bullet as I feel like it's getting into the weeds too much, and only makes sense after a bullet describing how logistic regression LRPs can be statistically integrated with SR-based benchmarks and CU status.
 
@@ -60,13 +70,13 @@ For logistic regression LRPs derived from CU assessments that are independent of
 
 When considering logistic regression based LRPs under alternative model assumptions, such as different formulation of the stock-recruitment model, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Care should be taken when there is little or no overlap in the distribution of LRPs under various model assumptions, where averaging can obscure different plausible realities that would require alternative management actions. <!--CH: this pgh is new. Do I need similar text for projection LRPS?-->
 
-
+<!--CH: the following 2 lines give a line break before the next heading-->
+\
+&nbsp;
 **Projection LRPs**
 
 Projection LRPs explicitly account for underlying uncertainties in population and harvest parameters, such as CU-level productivity and capacity, age-structure, covariance in recruitment deviations, and variability in implementation of fixed exploitation strategies over time and among CUs. The inclusion of structural uncertainty in the form of the stock-recruitment relationship is demonstrated for the case study on Interior Fraser Coho. We recommend a thorough review of assumptions and either including them directly in random sampling in projections or including them as sensitivity analyses.
 One caveat of this approach is that the LRP depends on the management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. Although management procedures for Pacific salmon often include escapement goals, fixed exploitation limits, and/or a fixed set of exploitation rates that vary with abundances, in practice salmon are managed through regulations on effort or exploitation rate and not allowable catches, and emergent time-series of exploitation can be approximated with constant exploitation rate with implementation error. Other more realistic management procedures could be considered in future iterations.  Projection LRPs derived in this way cannot be used to assess status when management procedures changes. 
-
-Similar to proportional LRPs, uncertainties in projection LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by data-rich CUs that are included. Further details on assumptions that are required for projection LRPs and conditions when they may be considered are described in Section \@ref(guidelines). 
 
 
 One difference between projection and logistic regression LRPs is that for projection LRPs, uncertainties in all underlying parameters and CU-level benchmarks are integrated into the probability of all CUs being above their lower benchmarks, so that the LRP itself does not have statistical uncertainty associated with it. In contrast, 95% CIs associated with logistic regression LRPs account for estimation uncertainty not included in projection LRPs. 
@@ -77,7 +87,9 @@ One difference between projection and logistic regression LRPs is that for proje
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item ...
+\item For \textbf{proportional LRPs},  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and remaining data-rich CUs are above Red Status, due to possible positive biases in status based on data-rich CUs alone. An SMU status is provisional when data-rich CUs are deemed representative of data-deficient CUs, and data-deficient when they are not.
+\item In contrast, if any component CU has Red status, the LRP of 100% CUs above the Red status is considered breached regardless of the presence of data-deficient of CUs how representative they are of data-riCh CUs.
+\item For For \textbf{aggregate abundance LRPs} we recommend that SMU status be provisional when SMUs contain data-deficient CUs that can be represented by data-rich CUs regardless of the status of data-rich CUs.
 \end{itemize}
 \end{tcolorbox}
 
@@ -90,12 +102,17 @@ For aggregate abundance LRPs we recommend that SMU status be provisional when SM
 
 
 
-## FUTURE RESEARCH
+## FUTURE RESEARCH {#futureResearch}
 
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item ...
+\item We recommend future research be prioritized to evaluate the impacts of:
+\begin{itemize} 
+\item temporal trends in underlying population parameters such as productivity on biological benchmarks and reference points 
+\item adapting LRPs to include a broader scope for serious harm, including ecosystem and habitat considerations and traditional knowledge
+\item simulation evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty
+\end{itemize}
 \end{itemize}
 \end{tcolorbox}
 
